[package]
name = "fussy-fishies"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/cdbfoster/bevy.git", branch = "fussy-fishies-fixes" }
rand = "0.8"

[features]
default = ["fast-build"]
fast-build = ["bevy/dynamic"]

[profile.dev]
opt-level = 3